Fix some layout issues

--- a/src/css/toggle.css
+++ b/src/css/toggle.css
@@ -2,11 +2,11 @@
     display: flex;
     flex-direction: row;
     width: 100%;
+    height: 24px;
     position: relative;
-    justify-content: flex-start;
     align-items: center;
+    justify-content: flex-start;
 }
-
 .input-field.toggle label {
     max-width: 40%;
     margin-right: 10px;
